tests/expected/semant02e.semant.err
semant02e.usc:17:6: error: Invalid redeclaration of identifier 'x'
	int x;
	    ^
1 Error(s)
